--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -58,23 +58,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # - name: Setup dependencies
-      #   run: npm run setup-deps
-
-      # - name: Run Unit Tests
-      #   run: NODE_OPTIONS=--max-old-space-size=8192 npm test
-
       - name: Create .env file from secrets
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          Env: ${{ secrets.ENV }}
+          ENV: ${{ secrets.ENV }}
           STAGENAME: ${{ secrets.STAGENAME }}
         run: |
-          printenv | grep 'Env' > .env.${{ secrets.ENV }}
-          printenv | grep 'API' > .env.${{ secrets.STAGENAME }}
-          cat .env.${{ secrets.ENV }}
+          echo "Env=${{ secrets.ENV }}" > .env
+          echo "STAGENAME=${{ secrets.STAGENAME }}" >> .env
+          cat .env
 
       - name: Read .env file and construct parameter overrides
         id: construct-params
@@ -83,107 +74,105 @@ jobs:
           while IFS= read -r line; do
             IFS='=' read -r key value <<< "$line"
             PARAMS="$PARAMS ParameterKey=$key,ParameterValue=$value"
-          done < .env.${{ secrets.ENV }}
+          done < .env
+          echo "PARAMS=$PARAMS" >> $GITHUB_ENV
           echo "::set-output name=params::$PARAMS"
 
       - name: Deploy Backend
-        # if: github.event_name == 'if_merged'
         env:         
-          ENV: ${{ secrets.ENV }}
-          PARAMS: ${{ steps.construct-params.outputs.params }}
-          STAGENAME: ${{ secrets.STAGENAME }}
+          PARAMS: ${{ env.PARAMS }}
         run: |
           sam validate
           sam build
           sam deploy --parameter-overrides $PARAMS 
 
-  notify_on_success:
-    runs-on: ubuntu-latest
-    environment:
-      name: main
-    needs: if_merged
-    if: success()
-    steps:
-      - name: Notify Slack for pipeline success
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          REPO_NAME: ${{ secrets.REPO_NAME }}
-          ENVIRONMENT: ${{ secrets.ENV }}  
-          REPO_SLUG: ${{ secrets.REPO_SLUG }}
-        run: |
-          curl -X POST -H 'Content-type: application/json' --data '{
-            "text": "GitHub Pipeline Status Notification",
-            "attachments": [
-              {
-                "fields": [
-                  {
-                    "title": "Repository",
-                    "value": "'${REPO_NAME}'"
-                  },
-                  {
-                    "title": "Environment",
-                    "value": "'${ENVIRONMENT}'"
-                  },
-                  {
-                    "title": "Status",
-                    "value": "SUCCESS",
-                    "color": "00FF00"
-                  },
-                  {
-                    "title": "Pipeline URL",
-                    "value": "https://github.com/${{ secrets.REPO_SLUG }}/${{ secrets.REPO_NAME }}/actions/runs/${{ github.run_id }}"
-                  },
-                  {
-                    "title": "Branch",
-                    "value": "${{ github.ref }}"
-                  }
-                ]
-              }
-            ]
-          }' $SLACK_WEBHOOK_URL
+  # notify_on_success:
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: main
+  #   needs: if_merged
+  #   if: success()
+  #   steps:
+  #     - name: Notify Slack for pipeline success
+  #       env:
+  #         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+  #         REPO_NAME: ${{ secrets.REPO_NAME }}
+  #         ENVIRONMENT: ${{ secrets.ENV }}  
+  #         REPO_SLUG: ${{ secrets.REPO_SLUG }}
+  #       run: |
+  #         curl -X POST -H 'Content-type: application/json' --data '{
+  #           "text": "GitHub Pipeline Status Notification",
+  #           "attachments": [
+  #             {
+  #               "fields": [
+  #                 {
+  #                   "title": "Repository",
+  #                   "value": "'${REPO_NAME}'"
+  #                 },
+  #                 {
+  #                   "title": "Environment",
+  #                   "value": "'${ENVIRONMENT}'"
+  #                 },
+  #                 {
+  #                   "title": "Status",
+  #                   "value": "SUCCESS",
+  #                   "color": "00FF00"
+  #                 },
+  #                 {
+  #                   "title": "Pipeline URL",
+  #                   "value": "https://github.com/${{ secrets.REPO_SLUG }}/${{ secrets.REPO_NAME }}/actions/runs/${{ github.run_id }}"
+  #                 },
+  #                 {
+  #                   "title": "Branch",
+  #                   "value": "${{ github.ref }}"
+  #                 }
+  #               ]
+  #             }
+  #           ]
+  #         }' $SLACK_WEBHOOK_URL
 
-  notify_on_failure:
-    runs-on: ubuntu-latest
-    environment:
-      name: main
-    needs: if_merged
-    if: failure()
-    steps:
-      - name: Notify Slack for pipeline failure
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          REPO_NAME: ${{ secrets.REPO_NAME }}
-          ENVIRONMENT: ${{ secrets.ENV }} 
-          REPO_SLUG: ${{ secrets.REPO_SLUG }}
-        run: |
-          curl -X POST -H 'Content-type: application/json' --data '{
-            "text": "GitHub Pipeline Status Notification",
-            "attachments": [
-              {
-                "fields": [
-                  {
-                    "title": "Repository",
-                    "value": "'${REPO_NAME}'"
-                  },
-                  {
-                    "title": "Environment",
-                    "value": "'${ENVIRONMENT}'"
-                  },
-                  {
-                    "title": "Status",
-                    "value": "FAILED",
-                    "color": "#FF0000"
-                  },
-                  {
-                    "title": "Pipeline URL",
-                    "value": "https://github.com/${{ secrets.REPO_SLUG }}/${{ secrets.REPO_NAME }}/actions/runs/${{ github.run_id }}"
-                  },
-                  {
-                    "title": "Branch",
-                    "value": "${{ github.ref }}"
-                  }
-                ]
-              }
-            ]
-          }' $SLACK_WEBHOOK_URL
+  # notify_on_failure:
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: main
+  #   needs: if_merged
+  #   if: failure()
+  #   steps:
+  #     - name: Notify Slack for pipeline failure
+  #       env:
+  #         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+  #         REPO_NAME: ${{ secrets.REPO_NAME }}
+  #         ENVIRONMENT: ${{ secrets.ENV }} 
+  #         REPO_SLUG: ${{ secrets.REPO_SLUG }}
+  #       run: |
+  #         curl -X POST -H 'Content-type: application/json' --data '{
+  #           "text": "GitHub Pipeline Status Notification",
+  #           "attachments": [
+  #             {
+  #               "fields": [
+  #                 {
+  #                   "title": "Repository",
+  #                   "value": "'${REPO_NAME}'"
+  #                 },
+  #                 {
+  #                   "title": "Environment",
+  #                   "value": "'${ENVIRONMENT}'"
+  #                 },
+  #                 {
+  #                   "title": "Status",
+  #                   "value": "FAILED",
+  #                   "color": "#FF0000"
+  #                 },
+  #                 {
+  #                   "title": "Pipeline URL",
+  #                   "value": "https://github.com/${{ secrets.REPO_SLUG }}/${{ secrets.REPO_NAME }}/actions/runs/${{ github.run_id }}"
+  #                 },
+  #                 {
+  #                   "title": "Branch",
+  #                   "value": "${{ github.ref }}"
+  #                 }
+  #               ]
+  #             }
+  #           ]
+  #         }' $SLACK_WEBHOOK_URL
         
