--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -58,14 +58,23 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      # - name: Setup dependencies
+      #   run: npm run setup-deps
+
+      # - name: Run Unit Tests
+      #   run: NODE_OPTIONS=--max-old-space-size=8192 npm test
+
       - name: Create .env file from secrets
         env:
-          ENV: ${{ secrets.ENV }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+          Env: ${{ secrets.ENV }}
           STAGENAME: ${{ secrets.STAGENAME }}
         run: |
-          echo "Env=${{ secrets.ENV }}" > .env
-          echo "STAGENAME=${{ secrets.STAGENAME }}" >> .env
-          cat .env
+          printenv | grep 'Env' > .env.${{ secrets.ENV }}
+          printenv | grep 'API' > .env.${{ secrets.STAGENAME }}
+          cat .env.${{ secrets.ENV }}
 
       - name: Read .env file and construct parameter overrides
         id: construct-params
@@ -74,13 +83,15 @@ jobs:
           while IFS= read -r line; do
             IFS='=' read -r key value <<< "$line"
             PARAMS="$PARAMS ParameterKey=$key,ParameterValue=$value"
-          done < .env
-          echo "PARAMS=$PARAMS" >> $GITHUB_ENV
+          done < .env.${{ secrets.ENV }}
           echo "::set-output name=params::$PARAMS"
 
       - name: Deploy Backend
+        # if: github.event_name == 'if_merged'
         env:         
-          PARAMS: ${{ env.PARAMS }}
+          ENV: ${{ secrets.ENV }}
+          PARAMS: ${{ steps.construct-params.outputs.params }}
+          STAGENAME: ${{ secrets.STAGENAME }}
         run: |
           sam validate
           sam build
