--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -84,14 +84,13 @@ jobs:
             IFS='=' read -r key value <<< "$line"
             PARAMS="$PARAMS ParameterKey=$key,ParameterValue=$value"
           done < .env.${{ secrets.ENV }}
-          done < .env.${{ secrets.STAGENAME }}
           echo "::set-output name=params::$PARAMS"
 
       - name: Deploy Backend
         # if: github.event_name == 'if_merged'
         env:         
           ENV: ${{ secrets.ENV }}
-          PARAMS: ${{ steps.construct-params.outputs.params }}
+          # PARAMS: ${{ steps.construct-params.outputs.params }}
           STAGENAME: ${{ secrets.STAGENAME }}
         run: |
           sam validate
