--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -69,13 +69,13 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          ENV: ${{ secrets.ENV }}
+          Env: ${{ secrets.ENV }}
           STAGENAME: ${{ secrets.STAGENAME }}
         run: |
           echo "AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}" > .env
           echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> .env
           echo "AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}" >> .env
-          echo "ENV=${ENV}" >> .env
+          echo "Env=${ENV}" >> .env
           echo "STAGENAME=${STAGENAME}" >> .env
           cat .env
 
