--- a/template.yaml
+++ b/template.yaml
@@ -6,7 +6,7 @@ Description: >
   Sample SAM Template for sam-app3
 
 Parameters:
-  Env:
+  ENV:
     Type: String
     AllowedValues:
       - local
@@ -41,13 +41,13 @@ Parameters:
 
 # Conditions:
 #   IsProd: !Equals
-#     - !Ref Env
+#     - !Ref ENV
 #     - prod
 #   IsStage: !Equals
-#     - !Ref Env
+#     - !Ref ENV
 #     - stage
 #   IsDev: !Equals
-#     - !Ref Env
+#     - !Ref ENV
 #     - dev
     
 Globals:
@@ -62,7 +62,7 @@ Globals:
       - !Ref testSharedLayer
     Environment:
       Variables:
-        env: !Ref Env
+        env: !Ref ENV
         STAGENAME: !Ref STAGENAME
     VpcConfig:
       SubnetIds:
@@ -71,7 +71,7 @@ Globals:
         - !Ref NoIngressSecurityGroup    
     # Tags:
     #   ProjectName: test
-    #   Environment: !If [IsDev, Development, !Ref Env]    
+    #   Environment: !If [IsDev, Development, !Ref ENV]    
 
 Resources:
   VPC:
@@ -82,18 +82,18 @@ Resources:
       EnableDnsHostnames: true
       Tags:
         - Key: Name
-          Value: !Sub 'test-platform-vpc-${Env}'
+          Value: !Sub 'test-platform-vpc-${ENV}'
         - Key: ProjectName
           Value: test
         # - Key: Environment
-        #   Value: !If [IsDev, Development, !Ref Env]
+        #   Value: !If [IsDev, Development, !Ref ENV]
 
   InternetGateway:
     Type: AWS::EC2::InternetGateway
     Properties:
       Tags:
         - Key: Name
-          Value: !Sub 'test-platform-vpc-${Env}'
+          Value: !Sub 'test-platform-vpc-${ENV}'
         - Key: ProjectName
           Value: test
 
@@ -112,11 +112,11 @@ Resources:
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Sub 'test-platform-vpc-${Env} Public Subnet (AZ1)'
+          Value: !Sub 'test-platform-vpc-${ENV} Public Subnet (AZ1)'
         - Key: ProjectName
           Value: test
         # - Key: Environment
-        #   Value: !If [IsDev, Development, !Ref Env]
+        #   Value: !If [IsDev, Development, !Ref ENV]
 
   PublicSubnet2:
     Type: AWS::EC2::Subnet
@@ -127,7 +127,7 @@ Resources:
       MapPublicIpOnLaunch: true
       Tags:
         - Key: Name
-          Value: !Sub 'test-platform-vpc-${Env} Public Subnet (AZ2)'
+          Value: !Sub 'test-platform-vpc-${ENV} Public Subnet (AZ2)'
         - Key: ProjectName
           Value: test
 
@@ -140,7 +140,7 @@ Resources:
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
-          Value: !Sub 'test-platform-vpc-${Env} Private Subnet (AZ1)'
+          Value: !Sub 'test-platform-vpc-${ENV} Private Subnet (AZ1)'
         - Key: ProjectName
           Value: test
 
@@ -153,7 +153,7 @@ Resources:
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
-          Value: !Sub 'test-platform-vpc-${Env} Private Subnet (AZ2)'
+          Value: !Sub 'test-platform-vpc-${ENV} Private Subnet (AZ2)'
         - Key: ProjectName
           Value: test
 
@@ -166,7 +166,7 @@ Resources:
       MapPublicIpOnLaunch: false
       Tags:
         - Key: Name
-          Value: !Sub 'test-platform-vpc-${Env} Private Subnet (AZ3)'
+          Value: !Sub 'test-platform-vpc-${ENV} Private Subnet (AZ3)'
         - Key: ProjectName
           Value: test
 
@@ -177,7 +177,7 @@ Resources:
       Domain: vpc
       Tags:
         - Key: Name
-          Value: !Sub 'test-platform-ng-eip-${Env}'
+          Value: !Sub 'test-platform-ng-eip-${ENV}'
         - Key: ProjectName
           Value: test
 
@@ -188,7 +188,7 @@ Resources:
       SubnetId: !Ref PublicSubnet1
       Tags:
         - Key: Name
-          Value: !Sub 'test-platform-vpc-ng-${Env}'
+          Value: !Sub 'test-platform-vpc-ng-${ENV}'
         - Key: ProjectName
           Value: test
 
@@ -198,7 +198,7 @@ Resources:
       VpcId: !Ref VPC
       Tags:
         - Key: Name
-          Value: !Sub 'test-platform-vpc-${Env} Public Routes'
+          Value: !Sub 'test-platform-vpc-${ENV} Public Routes'
         - Key: ProjectName
           Value: test
 
@@ -228,7 +228,7 @@ Resources:
       VpcId: !Ref VPC
       Tags:
         - Key: Name
-          Value: !Sub 'test-platform-vpc-${Env} Private Routes (AZ1)'
+          Value: !Sub 'test-platform-vpc-${ENV} Private Routes (AZ1)'
         - Key: ProjectName
           Value: test
 
@@ -260,7 +260,7 @@ Resources:
   NoIngressSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupName: !Sub 'test-no-ingress-sg-${Env}'
+      GroupName: !Sub 'test-no-ingress-sg-${ENV}'
       GroupDescription: 'Security group with no ingress rule'
       VpcId: !Ref VPC
 
@@ -276,7 +276,7 @@ Resources:
   testSharedLayer:
     Type: AWS::Serverless::LayerVersion
     Properties:
-      LayerName: !Sub 'test-SharedLayer-${Env}'
+      LayerName: !Sub 'test-SharedLayer-${ENV}'
       Description: Shared Common Functions and Files.
       ContentUri: layers/
       CompatibleRuntimes:
