--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -1,16 +1,16 @@
 name: Build and Deploy
 
 on:
-  push:
-    # types: [opened, synchronize, reopened, closed]
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
     branches:
-      - dev
+      - main
 
 jobs:
   
   unit_test:
     runs-on: ubuntu-latest
-    # if: github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened')
+    if: github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened')
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -24,15 +24,6 @@ jobs:
         run: |
           npm i
           npm run test
-
-      # - name: Install dependencies
-      #   run: npm install
-
-      # - name: Run ESLint
-      #   run: npm run lint
-
-      # - name: Run Prettier Check
-      #   run: prettier --check .    
 
   if_merged:
     runs-on: ubuntu-latest
@@ -66,6 +57,7 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
 
       - name: Create .env file from secrets
         env:
