--- a/template.yaml
+++ b/template.yaml
@@ -15,29 +15,29 @@ Parameters:
       - stage
   STAGENAME: 
     Type: String 
-  VpcCIDR:
-    Type: String
-    Default: 10.180.0.0/16
+  # VpcCIDR:
+  #   Type: String
+  #   Default: 10.180.0.0/16
 
-  PublicSubnet1CIDR:
-    Type: String
-    Default: 10.180.10.0/24
+  # PublicSubnet1CIDR:
+  #   Type: String
+  #   Default: 10.180.10.0/24
 
-  PublicSubnet2CIDR:
-    Type: String
-    Default: 10.180.11.0/24
+  # PublicSubnet2CIDR:
+  #   Type: String
+  #   Default: 10.180.11.0/24
 
-  PrivateSubnet1CIDR:
-    Type: String
-    Default: 10.180.20.0/24
+  # PrivateSubnet1CIDR:
+  #   Type: String
+  #   Default: 10.180.20.0/24
 
-  PrivateSubnet2CIDR:
-    Type: String
-    Default: 10.180.21.0/24
+  # PrivateSubnet2CIDR:
+  #   Type: String
+  #   Default: 10.180.21.0/24
 
-  PrivateSubnet3CIDR:
-    Type: String
-    Default: 10.180.22.0/24     
+  # PrivateSubnet3CIDR:
+  #   Type: String
+  #   Default: 10.180.22.0/24     
 
 Conditions:
   IsProd: !Equals
@@ -67,205 +67,205 @@ Globals:
       Variables:
         env: !Ref ENV
         STAGENAME: !Ref STAGENAME
-    VpcConfig:
-      SubnetIds:
-        - !Ref PrivateSubnet1
-      SecurityGroupIds:
-        - !Ref NoIngressSecurityGroup    
+    # VpcConfig:
+    #   SubnetIds:
+    #     - !Ref PrivateSubnet1
+    #   SecurityGroupIds:
+    #     - !Ref NoIngressSecurityGroup    
     # Tags:
     #   ProjectName: test
     #   Environment: !If [IsDev, Development, !Ref ENV]    
 
 Resources:
-  VPC:
-    Type: AWS::EC2::VPC
-    Properties:
-      CidrBlock: !Ref VpcCIDR
-      EnableDnsSupport: true
-      EnableDnsHostnames: true
-      Tags:
-        - Key: Name
-          Value: !Sub 'test-platform-vpc-${ENV}'
-        - Key: ProjectName
-          Value: test
-        # - Key: Environment
-        #   Value: !If [IsDev, Development, !Ref ENV]
+  # VPC:
+  #   Type: AWS::EC2::VPC
+  #   Properties:
+  #     CidrBlock: !Ref VpcCIDR
+  #     EnableDnsSupport: true
+  #     EnableDnsHostnames: true
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub 'test-platform-vpc-${ENV}'
+  #       - Key: ProjectName
+  #         Value: test
+  #       # - Key: Environment
+  #       #   Value: !If [IsDev, Development, !Ref ENV]
 
-  InternetGateway:
-    Type: AWS::EC2::InternetGateway
-    Properties:
-      Tags:
-        - Key: Name
-          Value: !Sub 'test-platform-vpc-${ENV}'
-        - Key: ProjectName
-          Value: test
+  # InternetGateway:
+  #   Type: AWS::EC2::InternetGateway
+  #   Properties:
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub 'test-platform-vpc-${ENV}'
+  #       - Key: ProjectName
+  #         Value: test
 
-  InternetGatewayAttachment:
-    Type: AWS::EC2::VPCGatewayAttachment
-    Properties:
-      InternetGatewayId: !Ref InternetGateway
-      VpcId: !Ref VPC
+  # InternetGatewayAttachment:
+  #   Type: AWS::EC2::VPCGatewayAttachment
+  #   Properties:
+  #     InternetGatewayId: !Ref InternetGateway
+  #     VpcId: !Ref VPC
 
-  PublicSubnet1:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
-      AvailabilityZone: !Select [0, !GetAZs '']
-      CidrBlock: !Ref PublicSubnet1CIDR
-      MapPublicIpOnLaunch: true
-      Tags:
-        - Key: Name
-          Value: !Sub 'test-platform-vpc-${ENV} Public Subnet (AZ1)'
-        - Key: ProjectName
-          Value: test
-        # - Key: Environment
-        #   Value: !If [IsDev, Development, !Ref ENV]
+  # PublicSubnet1:
+  #   Type: AWS::EC2::Subnet
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     AvailabilityZone: !Select [0, !GetAZs '']
+  #     CidrBlock: !Ref PublicSubnet1CIDR
+  #     MapPublicIpOnLaunch: true
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub 'test-platform-vpc-${ENV} Public Subnet (AZ1)'
+  #       - Key: ProjectName
+  #         Value: test
+  #       # - Key: Environment
+  #       #   Value: !If [IsDev, Development, !Ref ENV]
 
-  PublicSubnet2:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
-      AvailabilityZone: !Select [1, !GetAZs '']
-      CidrBlock: !Ref PublicSubnet2CIDR
-      MapPublicIpOnLaunch: true
-      Tags:
-        - Key: Name
-          Value: !Sub 'test-platform-vpc-${ENV} Public Subnet (AZ2)'
-        - Key: ProjectName
-          Value: test
+  # PublicSubnet2:
+  #   Type: AWS::EC2::Subnet
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     AvailabilityZone: !Select [1, !GetAZs '']
+  #     CidrBlock: !Ref PublicSubnet2CIDR
+  #     MapPublicIpOnLaunch: true
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub 'test-platform-vpc-${ENV} Public Subnet (AZ2)'
+  #       - Key: ProjectName
+  #         Value: test
 
-  PrivateSubnet1:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
-      AvailabilityZone: !Select [0, !GetAZs '']
-      CidrBlock: !Ref PrivateSubnet1CIDR
-      MapPublicIpOnLaunch: false
-      Tags:
-        - Key: Name
-          Value: !Sub 'test-platform-vpc-${ENV} Private Subnet (AZ1)'
-        - Key: ProjectName
-          Value: test
+  # PrivateSubnet1:
+  #   Type: AWS::EC2::Subnet
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     AvailabilityZone: !Select [0, !GetAZs '']
+  #     CidrBlock: !Ref PrivateSubnet1CIDR
+  #     MapPublicIpOnLaunch: false
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub 'test-platform-vpc-${ENV} Private Subnet (AZ1)'
+  #       - Key: ProjectName
+  #         Value: test
 
-  PrivateSubnet2:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
-      AvailabilityZone: !Select [1, !GetAZs '']
-      CidrBlock: !Ref PrivateSubnet2CIDR
-      MapPublicIpOnLaunch: false
-      Tags:
-        - Key: Name
-          Value: !Sub 'test-platform-vpc-${ENV} Private Subnet (AZ2)'
-        - Key: ProjectName
-          Value: test
+  # PrivateSubnet2:
+  #   Type: AWS::EC2::Subnet
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     AvailabilityZone: !Select [1, !GetAZs '']
+  #     CidrBlock: !Ref PrivateSubnet2CIDR
+  #     MapPublicIpOnLaunch: false
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub 'test-platform-vpc-${ENV} Private Subnet (AZ2)'
+  #       - Key: ProjectName
+  #         Value: test
 
-  PrivateSubnet3:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPC
-      AvailabilityZone: !Select [2, !GetAZs '']
-      CidrBlock: !Ref PrivateSubnet3CIDR
-      MapPublicIpOnLaunch: false
-      Tags:
-        - Key: Name
-          Value: !Sub 'test-platform-vpc-${ENV} Private Subnet (AZ3)'
-        - Key: ProjectName
-          Value: test
+  # PrivateSubnet3:
+  #   Type: AWS::EC2::Subnet
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     AvailabilityZone: !Select [2, !GetAZs '']
+  #     CidrBlock: !Ref PrivateSubnet3CIDR
+  #     MapPublicIpOnLaunch: false
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub 'test-platform-vpc-${ENV} Private Subnet (AZ3)'
+  #       - Key: ProjectName
+  #         Value: test
 
-  testNatGatewayEIP:
-    Type: AWS::EC2::EIP
-    DependsOn: InternetGatewayAttachment
-    Properties:
-      Domain: vpc
-      Tags:
-        - Key: Name
-          Value: !Sub 'test-platform-ng-eip-${ENV}'
-        - Key: ProjectName
-          Value: test
+  # testNatGatewayEIP:
+  #   Type: AWS::EC2::EIP
+  #   DependsOn: InternetGatewayAttachment
+  #   Properties:
+  #     Domain: vpc
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub 'test-platform-ng-eip-${ENV}'
+  #       - Key: ProjectName
+  #         Value: test
 
-  NatGateway:
-    Type: AWS::EC2::NatGateway
-    Properties:
-      AllocationId: !GetAtt testNatGatewayEIP.AllocationId
-      SubnetId: !Ref PublicSubnet1
-      Tags:
-        - Key: Name
-          Value: !Sub 'test-platform-vpc-ng-${ENV}'
-        - Key: ProjectName
-          Value: test
+  # NatGateway:
+  #   Type: AWS::EC2::NatGateway
+  #   Properties:
+  #     AllocationId: !GetAtt testNatGatewayEIP.AllocationId
+  #     SubnetId: !Ref PublicSubnet1
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub 'test-platform-vpc-ng-${ENV}'
+  #       - Key: ProjectName
+  #         Value: test
 
-  PublicRouteTable:
-    Type: AWS::EC2::RouteTable
-    Properties:
-      VpcId: !Ref VPC
-      Tags:
-        - Key: Name
-          Value: !Sub 'test-platform-vpc-${ENV} Public Routes'
-        - Key: ProjectName
-          Value: test
+  # PublicRouteTable:
+  #   Type: AWS::EC2::RouteTable
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub 'test-platform-vpc-${ENV} Public Routes'
+  #       - Key: ProjectName
+  #         Value: test
 
-  DefaultPublicRoute:
-    Type: AWS::EC2::Route
-    DependsOn: InternetGatewayAttachment
-    Properties:
-      RouteTableId: !Ref PublicRouteTable
-      DestinationCidrBlock: 0.0.0.0/0
-      GatewayId: !Ref InternetGateway
+  # DefaultPublicRoute:
+  #   Type: AWS::EC2::Route
+  #   DependsOn: InternetGatewayAttachment
+  #   Properties:
+  #     RouteTableId: !Ref PublicRouteTable
+  #     DestinationCidrBlock: 0.0.0.0/0
+  #     GatewayId: !Ref InternetGateway
 
-  PublicSubnet1RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      RouteTableId: !Ref PublicRouteTable
-      SubnetId: !Ref PublicSubnet1
+  # PublicSubnet1RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     RouteTableId: !Ref PublicRouteTable
+  #     SubnetId: !Ref PublicSubnet1
 
-  PublicSubnet2RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      RouteTableId: !Ref PublicRouteTable
-      SubnetId: !Ref PublicSubnet2
+  # PublicSubnet2RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     RouteTableId: !Ref PublicRouteTable
+  #     SubnetId: !Ref PublicSubnet2
 
-  PrivateRouteTable:
-    Type: AWS::EC2::RouteTable
-    Properties:
-      VpcId: !Ref VPC
-      Tags:
-        - Key: Name
-          Value: !Sub 'test-platform-vpc-${ENV} Private Routes (AZ1)'
-        - Key: ProjectName
-          Value: test
+  # PrivateRouteTable:
+  #   Type: AWS::EC2::RouteTable
+  #   Properties:
+  #     VpcId: !Ref VPC
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub 'test-platform-vpc-${ENV} Private Routes (AZ1)'
+  #       - Key: ProjectName
+  #         Value: test
 
-  DefaultPrivateRoute:
-    Type: AWS::EC2::Route
-    Properties:
-      RouteTableId: !Ref PrivateRouteTable
-      DestinationCidrBlock: 0.0.0.0/0
-      NatGatewayId: !Ref NatGateway
+  # DefaultPrivateRoute:
+  #   Type: AWS::EC2::Route
+  #   Properties:
+  #     RouteTableId: !Ref PrivateRouteTable
+  #     DestinationCidrBlock: 0.0.0.0/0
+  #     NatGatewayId: !Ref NatGateway
 
-  PrivateSubnet1RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      RouteTableId: !Ref PrivateRouteTable
-      SubnetId: !Ref PrivateSubnet1
+  # PrivateSubnet1RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     RouteTableId: !Ref PrivateRouteTable
+  #     SubnetId: !Ref PrivateSubnet1
 
-  PrivateSubnet2RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      RouteTableId: !Ref PrivateRouteTable
-      SubnetId: !Ref PrivateSubnet2
+  # PrivateSubnet2RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     RouteTableId: !Ref PrivateRouteTable
+  #     SubnetId: !Ref PrivateSubnet2
 
-  PrivateSubnet3RouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      RouteTableId: !Ref PrivateRouteTable
-      SubnetId: !Ref PrivateSubnet3
+  # PrivateSubnet3RouteTableAssociation:
+  #   Type: AWS::EC2::SubnetRouteTableAssociation
+  #   Properties:
+  #     RouteTableId: !Ref PrivateRouteTable
+  #     SubnetId: !Ref PrivateSubnet3
 
-  NoIngressSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupName: !Sub 'test-no-ingress-sg-${ENV}'
-      GroupDescription: 'Security group with no ingress rule'
-      VpcId: !Ref VPC
+  # NoIngressSecurityGroup:
+  #   Type: AWS::EC2::SecurityGroup
+  #   Properties:
+  #     GroupName: !Sub 'test-no-ingress-sg-${ENV}'
+  #     GroupDescription: 'Security group with no ingress rule'
+  #     VpcId: !Ref VPC
 
   testDependencyLayer:
     Type: AWS::Serverless::LayerVersion
@@ -355,35 +355,35 @@ Resources:
         DestinationArn: !GetAtt testApiLogGroup.Arn
         Format: '$context.requestId $context.identity.sourceIp $context.identity.caller $context.identity.user $context.httpMethod $context.resourcePath $context.status $context.integration.latency $context.requestTime $context.protocol $context.responseLength $context.integrationErrorMessage' 
 
-  LockOutInfoTable:
-    Type: AWS::DynamoDB::Table
-    DeletionPolicy: Delete
-    UpdateReplacePolicy: Delete
-    Properties: 
-      TableName: lockout-info
-      AttributeDefinitions:
-        - AttributeName: username
-          AttributeType: S
-        - AttributeName: maxAttempts
-          AttributeType: N
-        - AttributeName: attemptCounter
-          AttributeType: N
-      KeySchema:
-        - AttributeName: username
-          KeyType: HASH
-        - AttributeName: maxAttempts
-          KeyType: RANGE
-        - AttributeName: attemptCounter
-          KeyType: RANGE
-      ProvisionedThroughput:
-        ReadCapacityUnits: 0
-        WriteCapacityUnits: 0
-      TimeToLiveSpecification:
-        AttributeName: TimeToLive
-        Enabled: true
-      Tags:
-        - Key: ProjectName
-          Value: test  
+  # LockOutInfoTable:
+  #   Type: AWS::DynamoDB::Table
+  #   DeletionPolicy: Delete
+  #   UpdateReplacePolicy: Delete
+  #   Properties: 
+  #     TableName: lockout-info
+  #     AttributeDefinitions:
+  #       - AttributeName: username
+  #         AttributeType: S
+  #       - AttributeName: maxAttempts
+  #         AttributeType: N
+  #       - AttributeName: attemptCounter
+  #         AttributeType: N
+  #     KeySchema:
+  #       - AttributeName: username
+  #         KeyType: HASH
+  #       - AttributeName: maxAttempts
+  #         KeyType: RANGE
+  #       - AttributeName: attemptCounter
+  #         KeyType: RANGE
+  #     ProvisionedThroughput:
+  #       ReadCapacityUnits: 0
+  #       WriteCapacityUnits: 0
+  #     TimeToLiveSpecification:
+  #       AttributeName: TimeToLive
+  #       Enabled: true
+  #     Tags:
+  #       - Key: ProjectName
+  #         Value: test  
 
 Outputs:
   testApi:
