--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -1,10 +1,10 @@
 name: Build and Deploy
 
 on:
-  pull_request:
-    types: [opened, synchronize, reopened, closed]
+  push:
+    # types: [opened, synchronize, reopened, closed]
     branches:
-      - main
+      - dev
 
 jobs:
   
@@ -25,9 +25,9 @@ jobs:
           npm i
           npm run test
 
-  if_merged:
+  deploy:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main') || (github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && github.ref == 'refs/heads/main')
+    # if: github.event_name == 'push' && (github.ref == 'refs/heads/main') || (github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && github.ref == 'refs/heads/main')
     environment:
       name: main
     steps:
