--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "fortress-store-portal",
-  "version": "0.0.0",
-  "private": true,
+  "name": "sambackend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "jest --config=jest.config.test.mjs",
-    "start": "node ./bin/www",
-    "install-deps": "chmod +x dependency.sh && bash dependency.sh"
+    "db-setup": "docker compose -f docker-compose.yaml up -d",
+    "test": "jest --config=jest.config.test.mjs"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.3.1",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "jest": "^29.3.1"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.24.5",
-    "@babel/preset-env": "^7.24.5",
-    "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "axios-mock-adapter": "^1.21.2"
   }
 }
