--- a/samconfig.toml
+++ b/samconfig.toml
@@ -2,23 +2,25 @@ version = 0.1
 [default]
 [default.deploy]
 [default.deploy.parameters]
-stack_name = "test-store-portal-main"
+stack_name = "fortress-store-portal-dev"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-mq3eebwnc4qm"
-s3_prefix = "test-store-portal-dev"
+s3_prefix = "fortress-store-portal-dev"
 region = "us-east-1"
-confirm_changeset = false
+confirm_changeset = true
 capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
 image_repositories = []
 disable_rollback = true
+resolve_s3 = true
+parameter_overrides = "Env=\"dev\" StageName=\"Dev\" VpcCIDR=\"10.180.0.0/16\" PublicSubnet1CIDR=\"10.180.10.0/24\" PublicSubnet2CIDR=\"10.180.11.0/24\" PrivateSubnet1CIDR=\"10.180.20.0/24\" PrivateSubnet2CIDR=\"10.180.21.0/24\" PrivateSubnet3CIDR=\"10.180.22.0/24\""
 
-[main]
-[main.deploy]
-[main.deploy.parameters]
-stack_name = "test-store-portal-main"
+[dev]
+[dev.deploy]
+[dev.deploy.parameters]
+stack_name = "fortress-store-portal-dev"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-mq3eebwnc4qm"
-s3_prefix = "test-store-portal-main"
+s3_prefix = "fortress-store-portal-dev"
 region = "us-east-1"
-confirm_changeset = false
+confirm_changeset = true
 capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
 image_repositories = []
 disable_rollback = true
@@ -26,9 +28,9 @@ disable_rollback = true
 [stage]
 [stage.deploy]
 [stage.deploy.parameters]
-stack_name = "test-store-portal-stage"
+stack_name = "fortress-store-portal-stage"
 s3_bucket = "sam-cli-suntec-s3-samclisourcebucket-g65n9kwrflxz"
-s3_prefix = "test-store-portal-stage"
+s3_prefix = "fortress-store-portal-stage"
 region = "ap-southeast-1"
 confirm_changeset = false
 capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
@@ -38,9 +40,9 @@ disable_rollback = true
 [prod]
 [prod.deploy]
 [prod.deploy.parameters]
-stack_name = "test-store-portal-prod"
+stack_name = "fortress-store-portal-prod"
 s3_bucket = "sam-cli-suntec-s3-samclisourcebucket-g65n9kwrflxz"
-s3_prefix = "test-store-portal-prod"
+s3_prefix = "fortress-store-portal-prod"
 region = "ap-southeast-1"
 confirm_changeset = false
 capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
