--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "db-setup": "docker compose -f docker-compose.yaml up -d",
-    "test": "jest --config=jest.config.test.mjs"
+    "test": "jest --config=jest.config.test.mjs",
+    "install-deps": "bash dependency.sh"
   },
   "author": "",
   "license": "ISC",
