--- a/samconfig.toml
+++ b/samconfig.toml
@@ -6,12 +6,10 @@ stack_name = "fortress-store-portal-dev"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-mq3eebwnc4qm"
 s3_prefix = "fortress-store-portal-dev"
 region = "us-east-1"
-confirm_changeset = true
+confirm_changeset = false
 capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
 image_repositories = []
 disable_rollback = true
-resolve_s3 = true
-parameter_overrides = "Env=\"dev\" StageName=\"Dev\" VpcCIDR=\"10.180.0.0/16\" PublicSubnet1CIDR=\"10.180.10.0/24\" PublicSubnet2CIDR=\"10.180.11.0/24\" PrivateSubnet1CIDR=\"10.180.20.0/24\" PrivateSubnet2CIDR=\"10.180.21.0/24\" PrivateSubnet3CIDR=\"10.180.22.0/24\""
 
 [dev]
 [dev.deploy]
