--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -32,7 +32,7 @@ jobs:
   create_change_set:
     runs-on: ubuntu-latest
     environment:
-      name: dev
+      name: main
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
